syntax = "proto3";
option go_package = ".;proto";
package proto;


// 用户相关
service UserService {
	// 用户信息
	rpc GetUserInfo(UserInfoReq) returns (UserInfoResp) {}
}

// 视频相关
service VideoService {
    // 视频流
	rpc VideoFeed(VideoFeedReq) returns (VideoFeedResp) {}

	// 发布列表
	rpc GetVideoPublishList(VideoPublishListReq) returns (VideoListResp) {}

	// 视频信息
	rpc GetVideoInfo(VideoInfoReq) returns (VideoInfoResp) {}
}

// 赞相关
service FavoriteService {
    // 喜欢列表
	rpc GetFavoriteList(FavoriteListReq) returns (VideoInfoResp) {}
}

// 评论相关
service CommentService {
    // 视频评论列表
	rpc GetCommentList(CommentListReq) returns (CommentListResp) {}
}

message TokenInfoReq {
    uint32 id = 1;
    string username = 2;
}

message UserInfoReq {
    repeated uint32 user_ids = 1;
    TokenInfoReq token_info = 2;
}

message UserInfoResp {
    map<string, User> result = 1;
}

message User {
    string id = 1;
    string name = 2;
    int64 work_count = 3;
    int64 favorite_count = 4;
}


message VideoFeedReq {
    int64 latest_time = 1;
    TokenInfoReq token_info = 2;
}

message VideoPublishListReq {
    uint32 user_id = 1;
    string where = 2;
    string order = 3;
    int32 sort = 4;
    int64 page = 5;
    int64 page_size = 6;
    TokenInfoReq token_info = 7;
}

message VideoInfoReq {
    repeated uint32 video_ids = 1;
    TokenInfoReq token_info = 2;
}

message Video {
    string id = 1;
    string play_url = 2;
    string cover_url = 3;
    string title = 4;
    int64 favorite_count = 5;
    int64 comment_count = 6;
    bool is_favorite = 7;
    User author = 8;
}

message VideoFeedResp {
    int64 next_time = 1;
    repeated Video video_list = 2;
}

message VideoListResp {
    int64 total = 1;
    int64 page = 2;
    int64 page_size = 3;
    int64 total_page = 4;
    repeated Video video_list = 5;
}

message VideoInfoResp {
    map<string, Video> result = 1;
}

message FavoriteListReq {
    uint32 user_id = 1;
    TokenInfoReq token_info = 2;
}


message CommentListReq {
    uint32 video_id = 1;
    int64 page = 2;
    int64 page_size = 3;
    TokenInfoReq token_info = 4;
}

message Comment {
    string id = 1;
    User user = 2;
    string content = 3;
    string create_date = 4;
}

message CommentListResp {
    int64 total = 1;
    int64 page = 2;
    int64 page_size = 3;
    int64 total_page = 4;
    repeated Comment comment_list = 5;
}